[gd_scene load_steps=7 format=3 uid="uid://bluesleu6wl4v"]

[ext_resource type="Script" uid="uid://doiyfiyvndsgw" path="res://Scenes/Main/parts/OS/Apps/SiteDirectorTrainingApp/site_director_training_app.gd" id="1_5dlsa"]
[ext_resource type="PackedScene" uid="uid://dam3228oxnp8k" path="res://Scenes/TrainingProgram/TrainingProgram.tscn" id="3_68i6h"]
[ext_resource type="PackedScene" uid="uid://528j86gp5aj2" path="res://UI/WindowUI/Loading/Loading.tscn" id="4_ys1py"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="5_1374a"]
[ext_resource type="PackedScene" uid="uid://b3f8ve03806mt" path="res://Components/PauseContainer/PauseContainer.tscn" id="5_kem2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kem2l"]
bg_color = Color(0, 0, 0, 1)

[node name="SiteDirectorTrainingApp" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kem2l")
script = ExtResource("1_5dlsa")

[node name="TrainingProgram" parent="." instance=ExtResource("3_68i6h")]
layout_mode = 2

[node name="LoadingComponent" parent="." instance=ExtResource("4_ys1py")]
layout_mode = 2
loading_text = "Loading SIM SITEDIRECTOR 2000..."

[node name="PauseContainer" parent="." instance=ExtResource("5_kem2l")]
layout_mode = 2

[node name="TransitionScreen" parent="." instance=ExtResource("5_1374a")]
layout_mode = 2
